<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ntu.nlp.aos.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_generated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.result}"
                tools:text="Generated Text goes here" />
        </ScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_stars" />

                <RadioGroup
                    android:id="@+id/rg_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp">

                    <RadioButton
                        android:id="@+id/rb_star_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_1"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rb_star_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_2" />

                    <RadioButton
                        android:id="@+id/rb_star_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_3" />

                    <RadioButton
                        android:id="@+id/rb_star_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_4" />

                    <RadioButton
                        android:id="@+id/rb_star_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_5" />
                </RadioGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:viewBindingIgnore="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:viewBindingIgnore="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_annotation"
                    tools:viewBindingIgnore="true" />

                <CheckBox
                    android:id="@+id/cb_useful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/useful"
                    android:checked="@={viewModel.useful}"/>

                <CheckBox
                    android:id="@+id/cb_funny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funny"
                    android:checked="@={viewModel.funny}"/>

                <CheckBox
                    android:id="@+id/cb_cool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cool"
                    android:checked="@={viewModel.cool}"/>
            </LinearLayout>
        </HorizontalScrollView>

        <!-- Input bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_hint"
                android:text="@={viewModel.input}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:enabled="@{viewModel.enableSend}"

                android:onClick="@{() -> viewModel.onSend()}"
                />
        </LinearLayout>


    </LinearLayout>
</layout>